landing page completed

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center mt-5">
+            <div class="text-center mt-4 pb-4">
                 <button type="button" class="btn btn-outline-warning text-dark p-2 px-5 fs-5">Read More</button>
             </div>
         </div>
@@ -295,15 +295,16 @@
         </div>
     </div>
     <!-- 3rd Bennar End-->
-    <!-- 3rd Bennar Cards Start-->
+    <!-- last bannar Start -->
     <div class="bak-bnr" style="background-image: url('image/asset23.jpeg');">
-        <div style="background-color: rgba(255, 255, 255, 0.5);">
+        <!-- 3rd Bennar Cards Start-->
+        <div class="py-5" style="background-color: rgba(255, 255, 255, 0.5);">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 13.png"
+                                    class="card-img-top" alt="image/asset 13.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -311,9 +312,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 14.png"
+                                    class="card-img-top" alt="image/asset 14.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -321,18 +322,19 @@
                         </div>
                     </div>
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 15.png"
+                                    class="card-img-top" alt="image/asset 15.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
                             </div>
                         </div>
-                    </div><div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                    </div>
+                    <div class="col-md-3 mt-5">
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 16.png"
+                                    class="card-img-top" alt="image/asset 16.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -342,9 +344,9 @@
                 </div>
                 <div class="row">
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 17.png"
+                                    class="card-img-top" alt="image/asset 17.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -352,9 +354,9 @@
                         </div>
                     </div>
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 14.png"
+                                    class="card-img-top" alt="image/asset 14.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -362,18 +364,19 @@
                         </div>
                     </div>
                     <div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 18.png"
+                                    class="card-img-top" alt="image/asset 18.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
                             </div>
                         </div>
-                    </div><div class="col-md-3 mt-5">
-                        <div class="card p-3 rounded-0 crd-bck" style="width: 18rem;">
-                            <div style="width: 16rem;"><img src="image/asset 13.png" class="card-img-top"
-                                    alt="image/asset 13.png"></div>
+                    </div>
+                    <div class="col-md-3 mt-5">
+                        <div class="card p-3 rounded-0 border border-0 crd-bck" style="width: 16rem; height: 20rem;">
+                            <div class="mx-auto mt-1" style="width: 13rem;"><img src="image/asset 19.png"
+                                    class="card-img-top" alt="image/asset 19.png"></div>
                             <div class="card-body text-center mt-2 p-0">
                                 <p class="card-text fs-6 fw-bold">Norton Internet Security</p>
                                 <h4 class="card-title">$25.00</h4>
@@ -383,10 +386,137 @@
                 </div>
             </div>
         </div>
+        <!-- 3rd Bennar Cards End-->
+        <!-- Clients  Reviews Start -->
+
+        <div class="mt-2" style="background-color: rgba(255, 255, 255, 0.5);">
+            <div class="container">
+                <div class="py-4">
+                    <h1 class="hcrev">What Clients Say?</h1>
+                </div>
+                <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="10000">
+                            <div style="width: 150px;"><img src="image/asset 20.png" class="d-block w-100"
+                                    alt="image/asset 20.png"></div>
+                            <div class="carousel-caption d-none d-md-block text-start ps-4">
+                                <h3 class="fst-italic">Jone Due</h3>
+                                <p class="fst-italic text-dark">12/02/2019</p>
+                            </div>
+
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2000">
+                            <div style="width: 150px;"><img src="image/asset 20.png" class="d-block w-100"
+                                    alt="image/asset 20.png"></div>
+                            <div class="carousel-caption d-none d-md-block text-start ps-4">
+                                <h3 class="fst-italic">Jone Due</h3>
+                                <p class="fst-italic text-dark">12/02/2019</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div style="width: 150px;"><img src="image/asset 20.png" class="d-block w-100"
+                                    alt="image/asset 20.png"></div>
+                            <div class="carousel-caption d-none d-md-block text-start ps-4">
+                                <h3 class="fst-italic">Jone Due</h3>
+                                <p class="fst-italic text-dark">12/02/2019</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button> -->
+                </div>
+            </div>
+        </div>
+        <!-- Clients  Reviews End -->
+        <!-- contact Bannar start -->
+
+        <div class="container bg-warning cntbnr">
+            <div class="row">
+                <div class="col-md-8 my-5 ps-4 ">
+                    <h3 class="text-white fw-bold p-0 m-0">REQUEST A FREE QUOTE<img class="ms-3" width="70px"
+                            src="image/asset 21.png" alt=""></h3>
+                    <p class="fs-4 p-0 m-0">Get answers and advice from people you want it from.</p>
+                </div>
+                <div class="col-md-4 m-auto p-0">
+                    <button type="button" class="btn btn-dark py-2 rounded-pill cntbtn fs-3 fw-bolder">Get
+                        Quote</button>
+                </div>
+            </div>
+        </div>
+        <!-- contact Bannar end -->
     </div>
-    <!-- 3rd Bennar Cards End-->
-
-
+    <!-- last bannar End -->
+    <!-- Map Start -->
+    <div class="map m-0 p-0">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3621.3098616715924!2d67.1694570741394!3d24.819074846914653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjTCsDQ5JzA4LjciTiA2N8KwMTAnMTkuMyJF!5e0!3m2!1sen!2s!4v1707678587836!5m2!1sen!2s"
+            width="100%" height="450" style="border:0; padding: 0; margin: 0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <!-- Map end -->
+    <!-- Footer Start -->
+    <div class="bg-dark p-0 mt-0">
+        <div class="d-flex justify-content-center pt-5 pb-4">
+            <div class="social_icon me-4"><a class="text-white" href=""><i
+                        class="fa-brands fa-facebook-f"></i></a></div>
+            <div class="social_icon me-4"><a class="text-white" href=""><i
+                        class="fa-brands fa-twitter"></i></a></div>
+            <div class="social_icon me-4"><a class="text-white" href=""><i
+                        class="fa-brands fa-square-instagram"></i></a></div>
+            <div class="social_icon me-4"><a class="text-white" href=""><i
+                        class="fa-brands fa-square-whatsapp"></i></a></div>
+        </div>
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-3 text-white">
+                    <h4 class="mb-4 fw-bold">CONATCT US</h4>
+                    <p>123 Second Street Fifth Avenue,<br />
+                        Manhattan, New York <br />
+                        +987 654 3210</p>
+                </div>
+                <div class="col-md-3 text-white f_link">
+                    <h4 class="mb-4 fw-bold">ADDITIONAL LINKS</h4>
+                    <a class="f_link" href="">About us</a>
+                    <a class="f_link" href="">Terms and conditions</a>
+                    <a class="f_link" href="">Privacy policy</a>
+                    <a class="f_link" href="">News</a>
+                    <a class="f_link" href="">Contact us</a>
+                </div>
+                <div class="col-md-3 text-white f_link">
+                    <h4 class="mb-4 fw-bold">SERVICE</h4>
+                    <a class="f_link" href="">Data recovery</a>
+                    <a class="f_link" href="">Computer repair</a>
+                    <a class="f_link" href="">Mobile service</a>
+                    <a class="f_link" href="">Network solutions</a>
+                    <a class="f_link" href="">Technical support</a>
+                </div>
+                <div class="col-md-3 text-white">
+                    <h4 class="mb-4 fw-bold">ABOUT LIGHTEN</h4>
+                    <p>Tincidunt elit magnis nulla <br /> facilisis. Dolor Sapien nunc <br /> amet ultrices,</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-warning m-0 p-0">
+        <p class="text-dark text-center fs-5 py-3 m-0">Copyright 2019 All Right Reserved By Free html Templates Distributed By ThemeWagon</p>
+    </div>
+    <!-- Footer End -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -396,7 +526,7 @@
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
 </body>
